changed album to be getStaticProps for performance

--- a/posts/legally-married.mdx
+++ b/posts/legally-married.mdx
@@ -5,110 +5,47 @@ description: 'So you want to get married abroad?'
 type: 'travel'
 ---
 
-## Two American&#39;s Accounts of Getting Married (Legally) in Iceland
+## Two ways to get married abroad
 
-So, you want to get married abroad!  First off, not only do you deserve all the congratulations that go along with being engaged, but also a hearty slap on the back (and wink) for all the adventure and, frankly, **challenging logistics**, in getting married in a place where you are a _nonresident_.
+There are two ways to get married abroad and have that marriage legally recognized in the United States:
 
-Let’s preface with a clear statement before you read any further details, because depending on what you decide, you might not need most of this info.
+1. **Do all the legal stuff in the U.S.** and leave the adventure wedding to be all the fun parts about getting married.  The photos, the dressing up, the carefree laughter and frolicking through the landscapes for the camera.
+2. **Do the actual marriage licensing in Iceland, communicating with both their government offices and ours many, many times.** You still get to galivant through the landscapes for the camera (in fact, the actual wedding day itself is no different).  But you have all kinds of paperwork in both countries, for several months leading up to the wedding day, and for several months after the wedding day.
 
+One of these two options is way easier than the other.  Can you guess which one we chose?
+Option 2, you say!  Oh, indeed, dear friend… you know us well.
 
-## There are two ways to get married abroad:
+## Why would we choose to do it the hard way?
 
-1. **Do all the legal stuff in your home country** , and leave the adventure wedding to be all the fun parts about getting married.  The photos, the dressing up, the carefree laughter and frolicking for the camera.  Doing it this way will honestly save you a ton of headache and leave you free to enjoy everything without some of the hang-ups which would come out of dealing with legalities in multiple countries.
-2. **Do the actual marriage licensing in your destination country.** This comes with a warning.  If you choose to go this route, saddle up, because you are going to have to remain on your toes for all things paperwork related, for the entire duration of your wedding planning and perhaps even after you get back.  Yes, you’ll still get to frolic for photos and enjoy your wedding day (in fact, your actual wedding day will be a piece of cake on the paperwork front).  The days before, and perhaps after, will be a fair bit more work than those who choose the route of option 1.
+Three reasons: 
 
-## How do I decide?
+1. Since we were going to all this effort to get married in Iceland anyway, it just wouldn’t have felt the same to us if the actual marriage certificate wasn’t in Icelandic.  Plus, we thought having an Icelandic marriage license would be really cool.
+2. We inadvertently discovered, as we were doing our research on how to make this all work, that most countries have a formal marriage registry.  It’s basically a big database of records for everyone that ever got married.  Seems like a pretty logical and straightforward thing to have, right?  Yet the United States doesn’t have one!  Marriages here are recorded by each state, and they each keep those records however they will.  Nationally, there is no consensus on how to do this, and thus no database.  When we discovered this, it just gave us extra ammo for wanting our names recorded side by side… at least it would officially be in someone’s database of marriages!
+3. Jess is actually nuts enough that she *ahem* luxuriated in the challenge of communicating with multiple government agencies in both the U.S. and Iceland.  No really, she actually wanted to and even kinda enjoyed the experience :)
 
-Many people choose to go the route of option 1, and this is totally and completely, perfectly fine.  There is no harm, no shame, and you will not have to deal with some of the craziness that might arise which you can’t even imagine right now (trust me, you can’t).
+## What we had to do before we went to Iceland:
 
-If, however, you are a little bit nuts and prone to _completionism_ like we are, and you just really want that marriage license to forever sport the text of the country you’ve chosen to get married in… read on to learn how our decision process went.  The rest of this is obviously geared toward Iceland but could be applied to wherever you’ve chosen to marry it up!
+Here’s a rundown!  Make no mistake, it looks all easy when it’s laid out in this format, but when we first started looking into this, we honestly didn’t know much about the whole process.  It took several weeks of piecing things together.  There’s a lot of advice online, but the truth is that every state is just a little bit different, and sometimes the information Iceland needed, although nicely laid out online, wasn’t as clear as it first appeared to be.
 
-We were planning on doing option 1 for most of the time.  However, as our plans developed more with flights booked, lodging carefully selected, video chats with our photographer, custom dress finally arriving in the mail, handmade wedding rings all polished up, a global pandemic weathered through while all elopement plans sat on hold, and several books read on Iceland’s country and culture itself, we inevitably found ourselves getting more and more invested in Iceland and this whole adventure wedding.  
+1. We reached out to <MDXLink title="Siðmennt" href="https://www.sidmennt.is/"/>, the Ethical Humanist Association of Iceland to request a **celebrant** (officiant).  We wanted a non-religious ceremony, and appreciate as well as agree with the values of Siðmennt.
+2. For the legal parts in Iceland, we communicated with <MDXLink title="Sýslumenn (The Commissioner’s Office)" href="https://island.is/s/syslumenn"/>.  There are several documents they required us to submit.  Some were straightforward, such as Birth Certificates and Passports.  Our personal favorite document was <MDXLink title="Hjónavígsluskýrsla (Marriage Notification)" href="https://www.skra.is/umsoknir/eydublod-umsoknir-og-vottord/stok-vara/?productid=aa1672b9-ec79-11e6-9442-005056851dd2"/>.  We had an embarrassing hiccup with this document (details in next section).  We also needed a **Certificate of Marital Status**.  Remember how the U.S. doesn’t have a marriage database?  Well, that means we can’t get a Certificate of Marital Status, so instead we had to…
+3. Request a **Search of Vital Records for Marriage** in our home state.  We ended up doing this in Montana, and it was a challenge to have timely communications with them during the height of COVID.
+4. We needed above mentioned Search to be official with an **Apostille**.  These are entirely separate offices, and the Vital Statistics office was more than a bit confused about why we needed our search of vital records to have an apostille.  Apparently, they don’t get this request often.
 
-It started to eat at us; if we were going to all this effort to get married in another country, wouldn’t it just be the cherry on top if our actual marriage license were Icelandic?  There was something poetic about our official documents being forever filed in the land we chose to elope in, a formal record of some sort left behind for eternity (or at least the duration of the human race).  The idea gave a simple legal document an almost romantic standing of its own symbolism and, being romantic people (_and completionist_), this was an idea we ultimately couldn’t resist bringing to fruition.  Apart from that, there is perhaps no other country in the world with better kept genealogical records than Iceland.  While obviously none of our own heritages are found there, our marriage license now certainly is, and I have to say we are quite happy with this small little slice of our existence on their record.  We are a near infinitely tiny blip in the vast expanse of Icelandic records spanning back to its first settlers, but a blip nonetheless.
+Iceland has a strict timeline on when all of this should be submitted by.  They also have a time window, meaning some of the documents can’t be older than a couple of months, which meant we couldn’t do our vital records search any earlier than about 2 months.  Unfortunately, even though we reached out to the vital records office as early as this 2 months allowed, somehow two days before we needed to mail our documents to Iceland, events went something like this… 
 
-This was the reasoning behind our choice, but it’s a personal one that each couple must make for themselves.  After doing the process ourselves, I’d also mention that one or both of you sort of needs to have either skill or interest in learning to be a diplomat or at least negotiations with both the U.S. and Icelandic government.  No, you won’t actually be one, but at least being interested in that side of things will make the process worth it.
+Jess calls the Office of Vital Records for something like the fifth time.  Their office is utter chaos.  Our document has been hanging out there for perhaps a month at this point.  She then calls the Apostilles office to plea for help.  Apparently, these two offices are a block away from each other.  The Apostilles lady, who was Jess’s pal by this point (seriously, she even requested a couple wedding photos and we sent some to her as a thank you), physically walked down to the Office of Vital Records, picked our documents up, took them back to her office for an apostille, and then hand delivered them to the post office for overnight shipping.  They arrived in our hands the next day, spent all of 2.5 minutes in our possession whereupon they were taken to our closest shipping depot and express mailed to Iceland.  After hanging out in Germany for a teeth-bitingly extended layover, they hopped up to Iceland and arrived in their office literally half an hour before COB on the last day possible to submit them.  To be fair, the offices in Iceland were well acquainted with our situation by that point and sounded like they would have allowed us one extra day… maybe… we’re glad we didn’t need to find out!
 
-For us, deciding to go this route created some truly **stressful** moments in the final hour, which could have been entirely avoided on our part but were learning experiences (I’ll share these later on).  If you want those learning experiences packed in with your wedding then choosing to do the paperwork there might be perfect.  If not though, and you’d rather not saddle more unknowns and potential “oh shit” moments onto your wedding day, then I’d say skip this and do the paperwork back home.
+## How this process continued in Iceland:
 
+Essentially, you send in photocopies of everything ahead of time which you are then expected to show the real deal of once you physically show up in Iceland.  If everything goes smoothly, you should show up at <MDXLink title="Sýslumaðurinn á höfuðborgarsvæðinu (The District Commissioner of Greater Reykjavik)" href="https://goo.gl/maps/Zzvb88n2onyPQBqN7"/>, show your passports, and then they should give you all your documents back along with a “license to wed.”  You then take this to your celebrant to have signed the day of your wedding.
 
-## Doing the Marriage License Abroad (Specifically in Iceland)
+This smooth, easy process is NOT how things went for us, because we made a rather hilarious and embarrassing (perhaps even _millennial_) mistake.  That story is too long for this little blog post, but we’d love for you to read about it in <MDXLink title="Misadventure with our Marriage License" href="/posts/misadventure"/>.
 
-Two Disclaimers to begin with:
+## What we had to do upon our return from Iceland:
 
-1. Neither of us are lawyers or legal experts by any means, and everything we will share is simply from our own experience.  If you are a lawyer, or know an ounce more about law than we did going into this, you will probably get a good laugh at a few things.  If you have half a brain, you will laugh at our Official Signatures failure moment.
-2. Everything is geared toward eloping in Iceland as a US citizen.  Other countries would be very similar to the process we went through, but **definitely** do not skimp on the research.
+1. We first contacted **Þjóðskrá (The Registration Office)** in Iceland to request certified copies of our marriage license.  Several copies arrived in the mail a few weeks later, and then we began the process of trying to figure out how to file them in a country that doesn’t have a national marriage registry…
+2. If you do your research about validating a marriage license from another country in the United States, everything says to contact the **Office of the Attorney General**.  Full disclosure, Jess did this in two separate states (Montana and Washington).  In both cases she was sent to various other offices and told that the Attorney General does not handle this in any capacity.  Proof that Google is not always right.  After several dead ends of calling different offices, the Vital Records Office was able to point us in a good direction.  
+3. Turns out the answer is way simpler than we (and nearly everyone in the Attorney General’s office) thought.  The **Clerk and Recorders Office** is where we eventually ended up.  They took a copy of our Icelandic marriage license, uploaded it into the State’s official records, and voila!  We even have a document number where we can look it up.
+4. And last but not least… we _both_ changed our last names!
 
-Before we dive in, there are three important lessons we learned from this whole process that we&#39;d like to place first and foremost. They won&#39;t be fully explained here, but will follow as you read. Just skim them here and keep them in the back of your mind:
-
-> **Lesson 1:** The United States **does not** have any formal marriage registry or database.  Iceland **does**.  What does this mean?  It means that you are going to have to jump through a few hoops with things like Single Status/Vital Records before the wedding, and then dealing with how to file the marriage license in the US after the wedding. 
-
-> **Lesson 2:** DO NOT SIGN ANY DOCUMENT ELECTRONICALLY.  No PDF signatures.  No magic wizardry when your witnesses live in a different town than you.  Get that business in PEN AND INK, no more, no less.
-
-> **Lesson 3:** This is where the “interest in being a diplomat” comes in.  Be incredibly persistent yet understandingly patient, and oh so sweet in all communications.  Start understanding what the process to accomplish all of this is as early as you can, get your documents in order as soon as possible and keep notes if you have to in order to keep it all straight.  Write down the names of offices, phone numbers, email, and people you talk to.  Record the date you last talked to them and what the status of a document was at that time.  On it’s own, every step is straightforward, and if it was just you that you had to worry about, you could probably accomplish this all in about 10 minutes.  But government offices do not work that way, in any country, and there is a strong possibility that something seemingly small will come up and set a document or process back by a week or two.  It is amazing how quickly you forget when going about your day to day life, that you mailed a Vital Records request 3 weeks ago and it is probably high time to follow up with a phone call.  If you write little notes to yourself along the way to jog your memory, you will only end up pulling some of your hair out instead of all of it.  And at the end you might just feel like you’ve taken Diplomat training 101.
->
-> **Remember:** Persistent, but also patient.  It’s an art.
-
-> **Lesson 4:** All dealings with the U.S. system are infinitely more difficult than Iceland’s.  For every day you give Iceland to accomplish something… give the U.S. about 2 weeks.
-
-## There are three offices in Iceland you are going to be communicating with:
-
-1. Your choice of **celebrant**.  We went through **Siðmennt**, the Ethical Humanist Association in Iceland since we agree with their values (if we were Icelanders, we would probably belong to Siðmennt).  We also wanted a non-religious ceremony.  At the time we got married, they preferred you to submit a questionnaire on their website and then they assigned a celebrant to you, who then reached out via email.  This process can take several weeks or even 1-2 months, so do it as soon as you have your wedding date!
-
-    [Link to Siðmennt](https://www.sidmennt.is/)
-
-2. **Sýslumenn (The Commissioner’s Office)**  is where you will submit all your documents to apply for a legal marriage.  There are several around the country, but we used the one in Reykjavík.  Start rounding up your documents as early as you can to make your life easier.
-    
-    _**Remember** to be mindful of due dates.  A rundown of the documents and your interactions with Sýslumenn will follow in the next section._
-
-    [Link to Sýslumenn](https://island.is/s/syslumenn)
-
-**Þjóðskrá (The Registration Office)** is who you will request a copy of your marriage license from after the wedding.  When we got married, they liked email inquires with all your information included (wedding date, names, address, etc) and then required you to call and pay with a credit card over the phone.  I might add on the **Apostilles** office here are well, because you might want to have your copies apostilled so that they are official documents you can show your home country.  Apostilles is a separate office and you will need to contact them separately.  You will then have Þjóðskrá send your documents to the Apostilles office, who will then mail them to you.  At the time of our request, the Apostilles office was accepting phone payment info as well.
-
-**A rundown of the documents and your interactions with Sýslumenn:**
-
-1. _Marriage Notification_ (Hjónavígsluskýrsla) https://www.skra.is/english/forms/
-This one declares your intent to marry, and has two witnesses sign to certify that you are not already married (make sure the copy you give to Iceland is signed in pen and ink, the real deal, and NOT a photocopy or printout)
-
-2. _Birth Certificates_ – must be either original copies, or official copies
-    [Link to Hjónavígsluskýrsla form](https://island.is/s/syslumenn)
-3. _Certificate of Marital Status_ – this relates to lesson #1.  Since the US doesn’t have an official record or registry database for marriage, you will need to request a Search of Vital Records for Marriage for both of you.  It needs to be an official document, so signed and dated, and then needs to have an apostille.  The **Apostilles office is separate**, so you’ll need to coordinate this.  Finally, the Search **cannot be older than 8 weeks** when you send it into Sýslumenn.
-4. _Passports_ or Work Visas, and the appropriate stamp from customs as you enter the country.
-5. _Submit_ all of the required documents to Iceland’s Commissioners Office (Sýslumenn) **no later than 3 weeks prior to the wedding date**.  These can be emailed, but then you must submit the actual copies **no later than 5 days** before the wedding.  I’d recommend not pushing that and mail hardcopies as soon as possible.  Then, upon arrival, go to the Commissioner’s Office to have them see your passports in person and take their own photocopies.  If everything is in order at this time, they’ll give you your marriage document to have your celebrant sign at the ceremony.
-
-## Offices in the US you will or might communicate with:
-
-1. **The Office of Vital Records:** This is where in your home state you will request a _Search of Vital Records_ for Marriage (and Divorce, if you need it).  Here you also need to communicate with the **Apostilles Office** because Iceland will need these Vital Records Searches to be official!
-2. **Birth Certificates:** (usually can order online these days).
-3. **Passports:** While this is pretty obvious, now is a good reminder to pull them out of your super secret safe stash and make sure they aren’t going to expire right in the middle of all your carefully choreographed plans.
-4. **The Attorney General’s Office:**. This one is a maybe.  If you do your research about validating a marriage license from another country in the United States, everything says to contact the Office of the Attorney General.  Full disclosure, I did this in two separate states (twice, for both states).  All four times I was sent to various other offices and told that the Attorney General does not handle this in any capacity.  Proof that Google is not always right.  After several dead ends of calling different offices, the Vital Records Office was able to point me in a good direction.  Skip contacting this office and go directly to 5 if you can, but if 5 sends you away, then maybe try the Attorney General.  4 and 5 are tricky because they sort of depend on which state you live in, and there isn’t a clear answer.
-5. **Clerk & Recorders Office:** This is where we ended up showing our Icelandic marriage license and having them file something so that our marriage is legally recorded in the U.S.  More on this later.
-
-## A Suggested Timeline for Staging all of this:
-
-When I first started researching all of this, it was a bit overwhelming to understand everything needed, especially since some of it has the added time factor involved with due dates.  Here’s a suggested timeline:
-
-1. Solidify the wedding date and place as best as you can and immediately contact Siðmennt.  They took about 2 months to get back to us, so don’t wait.  If you are using a different entity or church, you’ll want to look into their timeframes.
-2. Several months in advance, round up official copies of your birth certificates (ordering official ones if you need to).  
-
-    _Personal Experience: We made sure to have two copies for each of us.  One copy was sent in the mail to Sýslumenn, and one copy traveled right with us to Iceland as a “just in case” sort of deal._
-
-3. Several months in advance, either get your passports or, if you already have them, make sure they aren’t going to expire right in the middle of all of your plans.
-4. About 12 weeks before your wedding date, request a Search of Vital Records for Marriage from your state of residence’s Vital Records Office and get it Apostilled.  The timing on this is a bit important.  When you submit your documents to Iceland, it has to be no later than 3 weeks before your wedding date (so submitting a little before that 3 weeks is fine, and encouraged).  Just keep in mind that your vital records search cannot be older than 8 weeks at the time of submitting.
-
-    _**Personal Experience:** I’ve suggested 12 weeks but you can certainly start a little earlier.  
-    I will say this: Vital Records Offices can vary, and some may take longer.  Mine took longer because they required a post mailed application and payment for the search (they have no digital requesting capabilities).  Then they had to send it back to me via the mail.  When it arrived, they didn’t date or sign the document, so I had to go back through this process again.  This is mostly due to the fact that Vital Records Searches typically are not official documents and getting married abroad is a very special case.  On that note, I didn’t realize before requesting the search that the copies need to be **apostilled**.  I didn’t know how this worked when I started all of this, but I am here to tell you that **apostilles are a separate office, and you are responsible for contacting the apostille office and then coordinating with the vital records office so that they can send everything over once they are done**.  By the time I ironed out all of these logistics, waited for snail mail, coordinated between offices, and also allowed them each the several days required to complete the paperwork, I was down to the 3 week deadline.  I overnighted the apostilled search to myself and then emailed copies to Sýslumenn **3 minutes** before their closing on a Friday when my deadline was that Sunday.  I’ve heard they are forgiving on the matter… but don’t test it.  Don’t do what I did._
-
-5. Several months in advance, start filling out the Marriage Notification.  It’s best if your dates and signatures are done around the same time that you submit everything so that it’s as current as possible.  We didn’t do this, but I would recommend actually creating two copies of this document and just having everyone sign twice.  That way you can send one, and have the other travel right with you (just in case).
-
-    _**Personal Experience:** (Our Major Failure on Obtaining Official Signatures):  Here is where the largest oh shit moment came about for us.  We don’t live in the same city as our family and friends, and the Marriage Notification document needs two witnesses to sign.  We chose two of our close friends, but the problem was how do you have someone physically sign a document when you live hours away?  Well, we used a PDF signer.  It was still both of their signatures, but in digital format.  (Anyone who works around official documents, you may begin your knowing smile about now).  Anyway, we mailed everything off to Iceland and around a week before our own departure check in to make sure our documents were all good to go.  We received the green light, but upon arriving to their office, tired and exhausted after our long flight, they held up the form and asked, “Where is the original copy of your Marriage Notification?”  We explained that was it.  The next 5 minutes were some of the most excruciating moments of our lives, while the kind woman helping us kept rubbing the piece of paper with her finger over and over to demonstrate that she could not feel the actual pen and ink signature, and that they had assumed we would be bringing the original document with us.  No, digital signatures are never allowed on official documents such as this.  All those months of hard work getting every document in and spending hours on hold with various government offices were for naught… we wouldn’t be getting married in Iceland after all.  I am happy to say… things worked out, but that’s a story for another post.  The moral of the story here is GET ALL SIGNATURES ON THIS PAPER IN PEN AND INK.  It might not look official, as official documents go, but I promise that you should take this little document more seriously than it looks in all its blue, green, and peachy colorfulness.  Get your signatures in person, and make people sign two different, identical copies so you have an extra.  I promise you: You do not want to be us, standing in the Commissioner’s Office of Iceland as your first venture into a foreign country and having it all spiral straight down to the trash before your very eyes with a feeling of helplessness growing and growing and growing..._
-
-6. **At least 3 weeks before the wedding date,** email all your documents to Sýslumenn.  It’s totally better for you if you can do this earlier, that way you might be able to ask them for a thumbs up before you mail your actual documents to them.  Then if there is an issue with one, you can fix it before.
-
-    _**Personal Experience:** As noted in the story above, they didn’t let us know in advance that our Marriage Notification document wasn’t sufficient, and they simply assumed we would be bringing the “real” copy with us.  This is a fair assumption, but I note it here so you won’t make the same mistake._
-
-7. **Mail your hardcopies all to Sýslumenn.** They need these at least 5 days before the wedding date.  Again, it is in your best interest if you don’t cut that right down to the wire.
-8. Head off to Iceland!  **Make sure you stop into Sýslumenn before your actual wedding date** (they are open M-F, 9am-3pm) so that they can take copies of your passports and hand you your Marriage Notification paper back, signed by them.  You’ll end up giving this to your celebrant, who will then sign after your ceremony and drop it back off for you.
-9. **Get married!** And forget about any of the paperwork.  Once you make it through Sýslumenn, you are good to go.  Stop worrying about it.  Just don’t lose the paper, and remember to hand it to you celebrant.
-10. Several days after your wedding, you should be able to request a copy of your marriage license from **Þjóðskrá** (The Registration Office).  You can do this in person if you want, or if you are busy off enjoying Iceland like we were, you can do it all back when you get home.  You’ll simply email them with the necessary information (your names and date of marriage).  At the time we requested ours, they had no way to pay online so we had to call and give credit card information over the phone.  If you want your copy (or copies) apostilled so that they are official, you’ll need to ask Þjóðskrá to send them over to the **Apostille** office, and then coordinate with them.  At the time we requested ours, the fees for the apostille as well as mailing were paid for via either a phone call and credit card, or a bank transfer.  We did the credit card to avoid international banking fees.
-11. Is your marriage official in the US?  Here’s where things are a bit strange.  Remember how the US does not have a registry or official database of marriages?  This means that if you call around like I did asking “how do I make my marriage abroad valid in the US,” no one will be able to give you an answer.  The official stance of the US is that any marriage conducted in a legal manner in any other country is considered valid by the US.  That’s sort of good news… it actually means you don’t need to do anything to prove to the US that you are married.  If ever questioned, simply present your Icelandic marriage license.  However, if you are worried about any tax reasons, or future estate dealings, or insurance, or any of the other thousands of things that feel like you need to have an official paper filed in the U.S., you can contact your local Clerk and Records Office and they will be able to file something for you.  Again, not totally necessary, but great for peace of mind.
