added bg image and fixed google map

--- a/posts/ceremony.mdx
+++ b/posts/ceremony.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Ceremony'
 date: '2022-06-12'
-description: 'So you want to get married abroad?'
+description: 'The moments surrounding our wedding'
 type: 'travel'
 ---
 
