fixed broken persistence and optimized bkgd image

--- a/posts/misadventure.mdx
+++ b/posts/misadventure.mdx
@@ -18,9 +18,9 @@ We had our map queued up and were heading into Reykjavík proper, but we happene
 We pulled into a parking lot of what our map announced should be the Icelandic Commissioner’s Office.  In no way did this building have a giant sign on it indicating such, in fact it just looked like one of five normal office buildings.  I should also mention here that our international phone plan through Verizon was not all they claimed it to be, so we were without internet capabilities to look any of this up or figure out if we were even in the right place.  Our view:
 
 <Image
-    src="https://lh5.googleusercontent.com/p/AF1QipPiJGt5Wc1TwafzbrAhaL7D5mRrUdbo_1hbpGpE=w426-h240-k-no"
-    width="426"
-    height="240"
+    src="https://lh5.googleusercontent.com/p/AF1QipPiJGt5Wc1TwafzbrAhaL7D5mRrUdbo_1hbpGpE"
+    width="512"
+    height="288"
     alt="The District Commissioner of Greater Reykjavik"
 />
 
@@ -52,9 +52,37 @@ The comical nature of our situation raining down upon us, we spent several momen
 
 We were eventually called back up to the window after a couple other Icelanders had entered the office and been directed to the waiting room.  Now we had witnesses for our humiliation.
 
-As suspected, she told us that they could under no circumstances accept the document we’d provided.  They had noticed the scanned signature in the advance email but just assumed the whole document was a scan and we were bringing the original in person.  She was sorry but they would have to, “Consider this marriage application voided and canceled.  We cannot proceed.”
+As suspected, she told us that they could under no circumstances accept the document we’d provided.  They had noticed the scanned signature in the advance email but just assumed the whole document was a scan and we were bringing the original in person.  She was sorry but they would have to, “**Consider this marriage application voided and canceled.  We cannot proceed.**”
+
+<Image
+    src="https://i.kym-cdn.com/entries/icons/original/000/012/589/patrickstar.jpg"
+    width="240"
+    height="249"
+    alt="The District Commissioner of Greater Reykjavik"
+/>
 
 To really drive home her point, she took the paper between her fingers and rubbed it, explaining that this was a living document, and if she couldn’t physically feel that nice pen and ink signature on the paper, it wasn’t valid.  Then, perhaps unnecessarily, she again repeated something along the lines of canceling the marriage application, “Unless you can get real signatures between now and the 4th, but we are closed over the weekend.  We are only open tomorrow, and only until 1400, so you would have to have signatures before then and I just don’t see how you can do that, because someone here in the country would have to vouch for you saying that they know you and that you aren’t already married.  They would have to be willing to legally sign for this.  So, I’m sorry, but I’m afraid there’s really nothing we can do.”
 
 Tail between our legs, we left the office, not dignified enough to look at the crowd of other waiting Icelanders.  
 
+
+**But wait!**  _This story does have a happy ending!_
+
+After getting some food in our bellies, we reached out to both our photographer, Steph, and our celebrant, Kristrún, with pleas for help.  As luck would have it, both of them were allowed to be our witnesses.  Consequently, we met them both on that very first day in Iceland and then the following day we dropped our freshly signed Hjónavígsluskýrsla (Marriage Notification) off back at the Commissioner’s Office.
+
+They told us they probably wouldn’t be able to get it back to us by the end of the day, so we wouldn’t have it over the weekend.  Oh well, our official wedding date would be a little different.  We went back to Reykjavík proper and were just settling down for a nice breakfast when we received a call from the Commissioner’s Office saying, “We have it ready but we close in 20 minutes.”
+
+**We were near exactly 20 minutes away.**
+
+We devoured our food, then jogged the 5 minutes to the parking garage (no, our full stomachs weren’t fans of this part).  We arrived at their office about 5 minutes after their closing, wondering if we were much too late.
+
+Alas, the lady who had helped us the day before had been kind enough to delay her exit of the building, despite having locked up the office.  She gave us a smile as we entered the building, declaring, “You made it!”  We left with our marriage license and huge grins.
+
+And there you have it.  The story of how we made a silly mistake on a signature, but still managed to have our official wedding on the 4th of July, 2021… despite a rather large and, in hindsight, obvious mistake.
+
+<Image
+    src="https://lh5.googleusercontent.com/p/AF1QipMUFOMaTtKhInHGpM4BcvIV5jvU7eCDaJWyjM_H"
+    width="512"
+    height="512"
+    alt="The District Commissioner of Greater Reykjavik"
+/>
